long text no longer overflows and sidenavs close on submit

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 html, body {
     overscroll-behavior-y: contain;
     user-select: none;
+    overflow-wrap: anywhere;
 }
 /* Colors */
 :root {
@@ -38,9 +39,6 @@ nav .sidenav-trigger {
     grid-template-areas: "image details delete";
     position: relative;
 }
-.delete-panel {
-    padding: 10px;
-}
 .delete-header {
     font-weight: bold;
 }
@@ -50,7 +48,7 @@ nav .sidenav-trigger {
 }
 .delete-cancel {
     display: inline-block;
-    width: 30%;
+    width: 40%;
 }
 .card-panel img {
     grid-area: image;
